@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.2 2006/04/17 07:07:12 jlam Exp $
+@comment $NetBSD: PLIST,v 1.3 2007/07/08 20:46:38 smb Exp $
 bin/gtkpod
 share/gtkpod/gtkpod.glade
 share/gtkpod/gtkpod.gladep
@@ -26,6 +26,13 @@ share/gtkpod/scripts/sync-korganizer.sh
 share/gtkpod/scripts/sync-notes.sh
 share/gtkpod/scripts/sync-thunderbird.sh
 share/gtkpod/scripts/sync-webcalendar.sh
+share/gtkpod/scripts/ldif2vcf.sh
+share/gtkpod/scripts/sync-knotes.sh
+share/gtkpod/scripts/sync-ldif.sh
+share/gtkpod/scripts/sync-palm-jppy.py
+share/gtkpod/scripts/sync-thunderbird-nano.sh
+share/gtkpod/scripts/sync-tomboy.sh
+share/locale/es/LC_MESSAGES/gtkpod.mo
 share/locale/de/LC_MESSAGES/gtkpod.mo
 share/locale/fr/LC_MESSAGES/gtkpod.mo
 share/locale/he/LC_MESSAGES/gtkpod.mo
