@@ -1,15 +1,11 @@
-$NetBSD: distinfo,v 1.4 2006/10/17 22:00:16 rillig Exp $
+$NetBSD: distinfo,v 1.5 2007/07/08 20:46:38 smb Exp $
 
-SHA1 (gtkpod-0.94.0.tar.gz) = 5c6fcb70a90e4ee879e2b2a6fa54b81c57a0378d
-RMD160 (gtkpod-0.94.0.tar.gz) = 0714c6e6f221f124e6f1d53545089af86023600b
-Size (gtkpod-0.94.0.tar.gz) = 983815 bytes
-SHA1 (patch-aa) = b1ffd2a81d5d012bacf069bfbcfb47323cfa0a2d
-SHA1 (patch-ab) = 536611987d882d9c77c21f055bfa0b3299b6b980
-SHA1 (patch-ac) = f1378c5c9154308ce521bf16edd68703f6784980
-SHA1 (patch-ba) = cd23859131e89a3ea7c54a900026589193a16130
-SHA1 (patch-bb) = 599ca360537fc007275096843f7ddcc143148227
-SHA1 (patch-bc) = 50d902cb7f91a16424bec543c7a3dd033cb6f957
-SHA1 (patch-bd) = 7f95521e7b79c5eb5db66e661b6ec1bbbbfa8cad
-SHA1 (patch-be) = b15b57f87b6bb8ece7f99daad4f2824f7a016595
-SHA1 (patch-bf) = 6425770193600e7aca9decd129839a95d1590d31
+SHA1 (gtkpod-0.99.8.tar.gz) = 023b55bc3cd9efba9fc7aa016ae63538a98cf1cf
+RMD160 (gtkpod-0.99.8.tar.gz) = 6ad6305393d66f7a84cc11e475045c8137a20c80
+Size (gtkpod-0.99.8.tar.gz) = 1074007 bytes
+SHA1 (gtkpod-0.99.8_libgpod-0.4.2.diff) = a5090b4597922cc81fc33efd9a3f7e1278b57708
+RMD160 (gtkpod-0.99.8_libgpod-0.4.2.diff) = 2e8094b8eba3179279d1b91133df588833e9df3e
+Size (gtkpod-0.99.8_libgpod-0.4.2.diff) = 2580 bytes
 SHA1 (patch-bg) = 645e060a2f5c455b893d57cc008b4b134fafe799
+SHA1 (patch-bh) = 42505851b41578d927972f2be52aaa6e81bd356a
+SHA1 (patch-bi) = 664a807d14318fd205a89dacc3084212cc9c6d5e
